[gd_scene load_steps=21 format=3 uid="uid://ddkvohnxbwq22"]

[ext_resource type="Script" uid="uid://b3atfi3xe6ern" path="res://Scenes/DoorScene/door_scene.gd" id="1_enmig"]
[ext_resource type="PackedScene" uid="uid://dhkyb6t56c2fk" path="res://UI/Buttons/KeyBtn/KeyBtn.tscn" id="2_y10y4"]
[ext_resource type="PackedScene" uid="uid://c4jcka6l73m7c" path="res://Scenes/IntroAndTitleScreen/IntroAndTitleScreen.tscn" id="4_y10y4"]

[sub_resource type="ViewportTexture" id="ViewportTexture_y10y4"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oq4hm"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu8yw"]
bg_color = Color(0, 0.529412, 0.278431, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_fu8yw"]
resource_name = "LightsOn"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../RenderSubviewport/Node3D/SpotLight3D:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.366667, 0.8, 0.966767, 1.1, 1.1001, 1.16667, 1.16677, 1.26667, 1.33333, 1.56667, 1.66667, 2.43333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2.54912),
"update": 0,
"values": [0.0, 0.0, 1.0, 0.2, 1.0, 1.0, 1.0, 0.6, 1.0, 1.0, 0.0, 0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../RenderSubviewport/Node3D/SpotLight3D2:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5907, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../RenderSubviewport/Node3D/SpotLight3D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../RenderSubviewport/Node3D/SpotLight3D2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0666667, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../RenderSubviewport/Node3D/BackWall/SpotLight3D:light_energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(-0.433333, 4.76667, 4.83333, 9.53333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../RenderSubviewport/Node3D/BackWall/OmniLight3D:light_energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(-0.1, 5.26667, 9.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.2]
}

[sub_resource type="Animation" id="Animation_y10y4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../RenderSubviewport/Node3D/SpotLight3D:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.64]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../RenderSubviewport/Node3D/SpotLight3D2:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.539]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../RenderSubviewport/Node3D/SpotLight3D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../RenderSubviewport/Node3D/SpotLight3D2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../RenderSubviewport/Node3D/BackWall/SpotLight3D:light_energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../RenderSubviewport/Node3D/BackWall/OmniLight3D:light_energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oq4hm"]
_data = {
&"LightsOn": SubResource("Animation_fu8yw"),
&"RESET": SubResource("Animation_y10y4")
}

[sub_resource type="Environment" id="Environment_fu8yw"]
background_mode = 2
background_energy_multiplier = 6.96
tonemap_mode = 1
volumetric_fog_enabled = true
volumetric_fog_density = 0.0
volumetric_fog_sky_affect = 0.0
adjustment_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_y10y4"]
dof_blur_far_enabled = true
dof_blur_far_distance = 0.01
dof_blur_near_distance = 0.01
dof_blur_amount = 0.14

[sub_resource type="FogMaterial" id="FogMaterial_oq4hm"]
density = 0.2
albedo = Color(0.748047, 0.0974478, 0.339362, 1)
edge_fade = 0.273208

[sub_resource type="BoxMesh" id="BoxMesh_ioj8j"]
lightmap_size_hint = Vector2i(104, 86)
flip_faces = true
size = Vector3(10, 3, 10)

[sub_resource type="BoxMesh" id="BoxMesh_7quq5"]
size = Vector3(2, 0.1, 0.8)

[sub_resource type="BoxMesh" id="BoxMesh_fu8yw"]
size = Vector3(0.8, 0.5, 0.01)

[sub_resource type="ViewportTexture" id="ViewportTexture_t1p0s"]
viewport_path = NodePath("RenderSubviewport/Node3D/Desk/Screen/Sprite3D/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_oq4hm"]
viewport_path = NodePath("SubViewport")

[sub_resource type="BoxMesh" id="BoxMesh_y10y4"]
size = Vector3(0.1, 2, 0.7)

[sub_resource type="PlaneMesh" id="PlaneMesh_oq4hm"]
size = Vector2(15, 3)

[sub_resource type="BoxMesh" id="BoxMesh_t1p0s"]
size = Vector3(1, 2, 0.1)

[node name="DoorScene" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enmig")

[node name="ColorBG" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.412152, 0.412152, 0.412152, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("ViewportTexture_y10y4")
expand_mode = 1

[node name="BtnControl" type="Control" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BtnControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BtnControl/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="BtnControl/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_oq4hm")

[node name="MarginContainer" type="MarginContainer" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="LeftSideBtnList" type="HBoxContainer" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="RightSideBtnList" type="HBoxContainer" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="LoginBtn" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/RightSideBtnList" instance=ExtResource("2_y10y4")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu8yw")
title = "LOGIN"
assigned_key = "E"
icon = 10
panel_color = Color(0, 0.529412, 0.278431, 1)
hide_icon_panel = false

[node name="SubViewport" type="SubViewport" parent="."]
own_world_3d = true
transparent_bg = true
size = Vector2i(1920, 1080)

[node name="IntroAndTitleScreen" parent="SubViewport" instance=ExtResource("4_y10y4")]

[node name="RenderSubviewport" type="SubViewport" parent="."]
own_world_3d = true
size = Vector2i(1920, 1080)

[node name="Node3D" type="Node3D" parent="RenderSubviewport"]

[node name="SceneAnimationPlayer" type="AnimationPlayer" parent="RenderSubviewport/Node3D"]
root_node = NodePath("../../../SubViewport/IntroAndTitleScreen")
libraries = {
&"": SubResource("AnimationLibrary_oq4hm")
}

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="RenderSubviewport/Node3D"]
transform = Transform3D(0.896223, 0, 0.443603, 0.0280627, 0.997997, -0.0566958, -0.442715, 0.0632608, 0.894428, 0, 0, 0)
visible = false

[node name="SpotLight3D2" type="SpotLight3D" parent="RenderSubviewport/Node3D"]
transform = Transform3D(-0.0353491, 0.994205, -0.101526, 0.303616, 0.107471, 0.946714, 0.952138, 0.0026406, -0.305655, 1.12125, 3.2137, 0.29774)
light_color = Color(0.894118, 1, 1, 1)
light_energy = 1.539
light_indirect_energy = 0.0
light_volumetric_fog_energy = 16.0
light_size = 0.101
light_specular = 2.298
shadow_enabled = true
shadow_transmittance_bias = -6.062
distance_fade_enabled = true
spot_range = 6.39943

[node name="SpotLight3D" type="SpotLight3D" parent="RenderSubviewport/Node3D"]
transform = Transform3D(0.989143, 0.134751, 0.0586271, -0.131921, 0.63847, 0.758256, 0.0647445, -0.757758, 0.649315, 0.340838, 1.46493, 0.951244)
light_energy = 0.64
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 6.073
shadow_enabled = true
shadow_bias = 5.873
shadow_transmittance_bias = -8.219
shadow_blur = 0.0
distance_fade_enabled = true
spot_range = 3.44
spot_attenuation = 1.23
spot_angle = 28.82
spot_angle_attenuation = 1.46409

[node name="WorldEnvironment" type="WorldEnvironment" parent="RenderSubviewport/Node3D"]
environment = SubResource("Environment_fu8yw")
camera_attributes = SubResource("CameraAttributesPractical_y10y4")

[node name="FogVolume" type="FogVolume" parent="RenderSubviewport/Node3D/WorldEnvironment"]
transform = Transform3D(-0.638487, -0.76712, 0.062134, -0.0960953, 0.159561, 0.9825, -0.763609, 0.621343, -0.175594, -1.656, -2.5, -2.018)
size = Vector3(15, 5, 5)
material = SubResource("FogMaterial_oq4hm")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="RenderSubviewport/Node3D/WorldEnvironment"]
light_color = Color(0, 0, 0, 1)
light_energy = 5.674
directional_shadow_mode = 0
directional_shadow_fade_start = 0.407

[node name="Room" type="MeshInstance3D" parent="RenderSubviewport/Node3D"]
mesh = SubResource("BoxMesh_ioj8j")
skeleton = NodePath("../Camera3D")

[node name="Desk" type="MeshInstance3D" parent="RenderSubviewport/Node3D"]
transform = Transform3D(0.929029, 0, 0.370006, 0, 1, 0, -0.370006, 0, 0.929029, -0.471272, -0.324212, -0.972282)
mesh = SubResource("BoxMesh_7quq5")
skeleton = NodePath("Screen")

[node name="Screen" type="MeshInstance3D" parent="RenderSubviewport/Node3D/Desk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.153126, 0.288742, 0.182368)
mesh = SubResource("BoxMesh_fu8yw")
skeleton = NodePath("OmniLight3D")

[node name="OmniLight3D" type="OmniLight3D" parent="RenderSubviewport/Node3D/Desk/Screen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00289717, 0.0292223, 0.254119)
light_color = Color(0.809196, 0.996359, 0.884591, 1)
light_energy = 0.461
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 0.0
shadow_enabled = true
omni_range = 0.52

[node name="Sprite3D" type="Sprite3D" parent="RenderSubviewport/Node3D/Desk/Screen"]
transform = Transform3D(1.16184, 0, 0, 0, 1, 0, 0, 0, 1.05997, 0, 0, 0.00720161)
pixel_size = 0.001
shaded = true
texture = SubResource("ViewportTexture_t1p0s")

[node name="SubViewport" type="SubViewport" parent="RenderSubviewport/Node3D/Desk/Screen/Sprite3D"]
size = Vector2i(640, 480)

[node name="TextureRect" type="TextureRect" parent="RenderSubviewport/Node3D/Desk/Screen/Sprite3D/SubViewport"]
offset_right = 640.0
offset_bottom = 480.0
texture = SubResource("ViewportTexture_oq4hm")
expand_mode = 1
stretch_mode = 6

[node name="MeshInstance3D" type="MeshInstance3D" parent="RenderSubviewport/Node3D/Desk"]
transform = Transform3D(0.98768, 0, 0.156486, 0, 1, 0, -0.156486, 0, 0.98768, 0.936956, -0.993736, -0.00805819)
mesh = SubResource("BoxMesh_y10y4")

[node name="BackWall" type="MeshInstance3D" parent="RenderSubviewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.62649, 0.00412459, -4.30626)
visible = false
mesh = SubResource("PlaneMesh_oq4hm")
skeleton = NodePath("Door")

[node name="Door" type="MeshInstance3D" parent="RenderSubviewport/Node3D/BackWall"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1.39897, 0.166167, 0.478002)
mesh = SubResource("BoxMesh_t1p0s")
skeleton = NodePath("../../SpotLight3D")

[node name="SpotLight3D" type="SpotLight3D" parent="RenderSubviewport/Node3D/BackWall"]
transform = Transform3D(0.995532, -0.050171, -0.0799888, -0.0944211, -0.52898, -0.843365, 4.12728e-09, 0.84715, -0.531354, 1.31287, -0.552918, 0.7393)
light_color = Color(0.78979, 0.152333, 0, 1)
light_energy = 0.5
light_indirect_energy = 0.641
light_volumetric_fog_energy = 0.0
light_specular = 0.0
spot_range = 1.468
spot_attenuation = -1.24
spot_angle = 41.3169
spot_angle_attenuation = 0.105112

[node name="OmniLight3D" type="OmniLight3D" parent="RenderSubviewport/Node3D/BackWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4266, 0.0518589, 0.499054)
light_color = Color(0.704139, 0.131311, 4.81307e-07, 1)
light_energy = 0.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 2.079
light_specular = 1.579
shadow_enabled = true
omni_range = 1.396
omni_attenuation = 0.776

[node name="PreviewCamera" type="Camera3D" parent="RenderSubviewport/Node3D"]
transform = Transform3D(0.927184, 0, 0.374606, 0, 1, 0, -0.374606, 0, 0.927184, 0.085, 0, 0)
fov = 122.9

[node name="Camera3D" type="Camera3D" parent="RenderSubviewport/Node3D"]
transform = Transform3D(0.927184, 0, 0.374606, 0, 1, 0, -0.374606, 0, 0.927184, 0.085, 0, 0)
current = true
fov = 25.5
size = 3.105
far = 89.32
